Revision history for Perl extension Log::Detect.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Log::Detect 1.423 2008/01/05

**	Log::Detect->new no longer takes a regexp parameter.  Use add_regexp.

**	Add Log::Detect->parse_text for block-by-block parsing.

****	Add Log::Detect->action_dump method. This prints where regexps which
	matched were added to aid debugging regexp lists. [Bryce Denney]

****	Fix --help to use Pod::Usage instead of depreciated pod2text.

* Log::Detect 1.422 2007/02/01

****	Documentation updates.

* Log::Detect 1.421 2006/03/06

****	Add report_limit to huge number of dinotrace cursors.  [Bryce Denney]

* Log::Detect 1.420 2005/10/19

**	NEWS is now renamed Changes, to support CPAN indexing. [Offer Kaye]

***	Add vtrace support for simvision.

* Log::Detect 1.415 2004/10/26

****	Remove date-stamp from generated files, to aid object caching.

* Log::Detect 1.414 2004/1/27

****	Documentation fixes

* Log::Detect 1.413 2003/9/4

***	Added new(...overwrite=>0) flag so .status can be kept
	across many parallel processes.

***	Added completed() method, and setting status=>undef in new.

* Log::Detect 1.412 2002/8/29

****	Readme updates

* Log::Detect 1.411 2002/8/22

****	Move files into lib directory to support perl 5.8.0. [Mike Castle]

----------------------------------------------------------------------
DESCRIPTION: Documentation on change history for this package
----------------------------------------------------------------------

This uses outline mode in Emacs.  See C-h m [M-x describe-mode].

Copyright 2001-2009 by Wilson Snyder.  This program is free software;
you can redistribute it and/or modify it under the terms of either the GNU
General Public License or the Perl Artistic License.

Local variables:
mode: outline
paragraph-separate: "[ 	\f\n]*$"
end: