@@ -3,3 +3,5 @@ Makefile
 pm_to_blib
 test_dir
 README
+.svn
+.git
