@@ -7,8 +7,8 @@ This package is Copyright 2001-2009 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    This program is free software; you can redistribute it and/or modify
-it under the terms of either the GNU Lesser General Public License or
-the Perl Artistic License.
+it under the terms of either the GNU Lesser General Public License
+Version 3 or the Perl Artistic License Version 2.0.
 
    This code is provided with no warranty of any kind, and is used
 entirely at your own risk.
