@@ -13,7 +13,7 @@ use Text::Wrap;
 use strict;
 use vars qw($VERSION %Default_Params);
 
-$VERSION = '1.423';
+$VERSION = '1.424';
 
 (my $prog = $0) =~ s/^.*\///;
 
@@ -676,7 +676,8 @@ L<http://www.veripool.org/>.
 
 Copyright 2000-2009 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
-Lesser General Public License or the Perl Artistic License.
+Lesser General Public License Version 3 or the Perl Artistic License
+Version 2.0.
 
 =head1 AUTHORS
 
