@@ -13,7 +13,7 @@ use Log::Delayed;
 use strict;
 use vars qw($Debug @More_Warnings $Detect $VERSION);
 
-$VERSION = '1.423';
+$VERSION = '1.424';
 
 #======================================================================
 
@@ -159,7 +159,8 @@ L<http://www.veripool.org/>.
 
 Copyright 2000-2009 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
-Lesser General Public License or the Perl Artistic License.
+Lesser General Public License Version 3 or the Perl Artistic License
+Version 2.0.
 
 =head1 AUTHORS
 
